basic functions: add, edit, done are finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
         <h1>Let's Do this!</h1>
-        <form id="new_task_form">
+        <form id="new-task-form">
             <input 
                 type="text"
                 id="new-task-input"
@@ -21,7 +21,7 @@
             <input 
                 type="submit"
                 id="new-task-submit"
-                value="Add"/>
+                value="Add to List"/>
         </form>
     </header>
 
@@ -29,10 +29,27 @@
         <section class="task-list">
             <h2>Tasks</h2>
             <div id="tasks">
-                
+
+                <!--<div class="task">
+                    <div class="content">
+                        <input 
+                            type="text"
+                            class="text"
+                            value="my shiny task"
+                            readonly
+                        />
+                    </div>
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="done">Done</button>
+                    </div>
+                </div> -->
+
             </div>
         </section>
 
     </main>
+
+    <script src="index.js"></script>
   </body>
 </html>
